a little measurement of uncertainty

--- a/perspectival_comparison/perspectives.ipynb
+++ b/perspectival_comparison/perspectives.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -75,10 +75,12 @@
     "# We could of course use the actual coefficients instead of simple\n",
     "# ranking, but I'm not convinced that adding and subtracting\n",
     "# coefficients has a firmer mathematical foundation than\n",
-    "# adding and subtracting ranks would.\n",
+    "# adding and subtracting ranks.\n",
     "\n",
     "# In order to compare these lists, we will start by filtering out words\n",
-    "# that don't appear in all six lists.\n",
+    "# that don't appear in all six lists. This is a dubious choice,\n",
+    "# but see below for a better way of measuring similarity between\n",
+    "# models based on their predictions.\n",
     "\n",
     "rootpath = 'models/'\n",
     "masculineperspectives = []\n",
@@ -171,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -231,7 +233,7 @@
        " (-0.43660789252728804, 'consciousness')]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -329,6 +331,66 @@
     "# \"Jaw,\" \"chin\" and \"head\" are also interesting. Perhaps in some weird way\n",
     "# they are signs of effort? \"She set her jaw ...\" Again, I'm not going\n",
     "# to actually infer anything from that -- just idly speculating."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Uncertainty\n",
+    "\n",
+    "How stable and reliable are these differences?\n",
+    "\n",
+    "We can find out by testing each of the nine possible pairings between our three masculine models and our three feminine models. The answer is that, for words at the top of the list like \"love,\" the differences are pretty robust. They become rapidly less robust as you move down the list, so we should characterize them cautiously."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "love\n",
+      "[0.9622166246851385, 0.9546599496221662, 0.8035264483627204, 0.9385390428211586, 0.9309823677581863, 0.7798488664987405, 0.9405541561712846, 0.9329974811083123, 0.7818639798488665]\n",
+      "\n",
+      "was-marry\n",
+      "[0.4931989924433249, 0.8901763224181359, 0.8841309823677581, 0.5083123425692695, 0.9052896725440805, 0.8992443324937027, 0.07153652392947107, 0.4685138539042822, 0.4624685138539043]\n",
+      "\n",
+      "spend\n",
+      "[-0.7622166246851386, -0.6816120906801008, -0.5994962216624685, -0.8619647355163729, -0.781360201511335, -0.6992443324937028, -0.8720403022670026, -0.7914357682619647, -0.7093198992443325]\n",
+      "\n",
+      "conscience\n",
+      "[-0.8282115869017632, -0.3858942065491183, -0.6554156171284634, -0.8967254408060453, -0.45440806045340043, -0.7239294710327455, -0.7627204030226701, -0.3204030226700252, -0.5899244332493703]\n",
+      "\n",
+      "imagination\n",
+      "[-0.7279596977329974, -0.6811083123425692, -0.6846347607052896, -0.4921914357682619, -0.4453400503778337, -0.4488664987405541, -0.31335012594458433, -0.2664987405541561, -0.27002518891687655]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_variation(word, feminine_lists, masculine_lists):\n",
+    "    differences = []\n",
+    "    for f in feminine_lists:\n",
+    "        for m in masculine_lists:\n",
+    "            d = (f.index(word) /len(f)) - (m.index(word) / len(m))\n",
+    "            differences.append(d)\n",
+    "    return differences\n",
+    "\n",
+    "print('love')\n",
+    "print(get_variation('love', masculine_lists, feminine_lists))\n",
+    "print('\\nwas-marry')\n",
+    "print(get_variation('was-marry', masculine_lists, feminine_lists))\n",
+    "print('\\nspend')\n",
+    "print(get_variation('spend', masculine_lists, feminine_lists))\n",
+    "print('\\nconscience')\n",
+    "print(get_variation('conscience', masculine_lists, feminine_lists))\n",
+    "print('\\nimagination')\n",
+    "print(get_variation('imagination', masculine_lists, feminine_lists))"
    ]
   },
   {
